@@ -1,4 +1,5 @@
 7.x-1.13.x
+ - #1796 Fix Harvest support for contact name and contact email.
  - #1783 Update services to 3.19
  - #1794 Update visualization_entity to 1.1
  - #1781 Update views to 3.15 and remove patch 1388684.
